# 18020581-Final-Year-Project

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  create-dependency-graphs.sh  geProject.sln  gui_default_layout.ini
Engine/: CMakeLists.txt  EntryManager.cpp
Engine/assets/images/spritesheets/: CMakeLists.txt
Engine/assets/levels/: animations.json  level1.json  menu.json  menuEditor.json
Engine/assets/shaders/: LineFragmentShader.glsl  VertexShaderDefault.glsl
Engine/include/ge_engine/: Components.h  Core.h  Entity.h  Entry.h  KeyboardListener.h  Logging.h  Managers.h  MouseListener.h  PhysicsManager.h  States.h  geProject.h
Engine/src/: Application.cpp  Application.h
Engine/src/AI/: Action.h  Enemy.cpp  Enemy.h  Goals.h  Planner.cpp  Planner.h  WorldStates.cpp  WorldStates.h
Engine/src/Animation/: AnimationManager.cpp  AnimationManager.h
Engine/src/Cameras/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  LevelCamera.cpp  LevelCamera.h
Engine/src/Clock/: Clock.cpp  Clock.h
Engine/src/Controller/: Command.h  ConcreteCommands.h  Controller.h  EnemyController.cpp  EnemyController.h  PlayerController.cpp  PlayerController.h  Receiver.cpp  Receiver.h
Engine/src/EntityManager/: EntityManager.cpp  EntityManager.h
Engine/src/Entry/: Application.cpp  Application.h  CMakeLists
Engine/src/Events/: CMakeLists  Event.h  EventHandler.h  FunctionWrapper.h  KeyboardEvent.h  MouseEvent.h
Engine/src/IMGui/: CMakeLists  ImguiWindow.cpp  ImguiWindow.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.h
Engine/src/Input/: Input.h
Engine/src/Inputs/: KeyboardListener.cpp  KeyboardListener.h  MouseListener.cpp  MouseListener.h
Engine/src/Logging/: CMakeLists  Logging.cpp
Engine/src/Memory/: AlignAlloc.cpp  CMakeLists  DeStackAllocator.cpp  DeStackAllocator.h  PoolAllocator.cpp  PoolAllocator.h  StackAllocator.h
Engine/src/Physics/: CustomContactListener.cpp  CustomContactListener.h  Physics.cpp  Physics.h  RayCastListener.cpp  RayCastListener.h
Engine/src/Render/: CMakeLists  Camera.cpp  Camera.h  EditorRender.cpp  EditorRender.h  FrameBuffer.cpp  FrameBuffer.h  Line.cpp  Line.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Engine/src/ResourceManager/: CMakeLists  ResourceManager.cpp  ResourceManager.h
Engine/src/SceneManager/: LevelEditorScene.cpp  LevelEditorScene.h  LevelScene.cpp  LevelScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneSerialize.cpp  SceneSerialize.h  SceneStates.cpp  SceneStates.h
Engine/src/Systems/: SpriteSystems.cpp  SpriteSystems.h  Systems.h
Engine/src/Threading/: CMakeLists  Semaphore.cpp
Engine/src/Windows/: HierarchyWindow.cpp  HierarchyWindow.h  ImguiWindow.cpp  ImguiWindow.h  Window.cpp  Window.h
Game/: CMakeLists.txt  Game.vcxproj
Game/assets/: levelEditor.json
Game/assets/levels/: animations.json  jsonTest.json  level1.json  levelEditor.json  menu.json
Game/assets/shaders/: FragmentShaderDefault.glsl  LineVertexShader.glsl  SelectionFragmentShader.glsl  SelectionVertexShader.glsl  VertexShaderDefault.glsl  defaultFragmentShader.glsl  defaultVertexShader.glsl
Game/src/: Game.cpp
build-dependency-graph/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dependencies.dot  dependencies.dot.ImGui.dependers  dependencies.dot.ThreadsThreads.dependers  dependencies.dot.box2d.dependers  dependencies.dot.ge_cpp_application  dependencies.dot.ge_cpp_engine  dependencies.dot.ge_cpp_engine.dependers  dependencies.dot.glad.dependers  dependencies.dot.glfw  dependencies.dot.glfw.dependers  dependencies.dot.glm.dependers  dependencies.dot.glu32.dependers  dependencies.dot.opengl32.dependers  dependencies.dot.sajson.dependers  dependencies.dot.spdlog  dependencies.dot.testbed  (+6 more)
(+56 files in other folders)
